--- a/templates/index.html
+++ b/templates/index.html
@@ -1,269 +1,85 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <script src="http://code.jquery.com/jquery-1.5.js"></script>
-    <title>some.st</title>
-    <style>
-        img {
-            vertical-align: middle;
-            border-style: none;
-        }
-
-        * {
-            margin: 0;
-            box-sizeing: border-box;
-            transition: all 0.35s linear;
-        }
-
-        .title_group {
-            background: linear-gradient(rgb(179, 197, 207), rgb(106, 123, 139), rgb(79, 84, 88));
-            color: rgb(179, 197, 207);
-            display: flex;
-            flex-grow: 1;
-            flex-shrink: 0;
-            padding: 24px 12px;
-            align-items: stretch;
-            text-align: center;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-
-        .galley {
-            display: flex;
-            box-sizing: border-box;
-            position: relative;
-            justify-content: space-between;
-
-        }
-
-        .art-work {
-            -webkit-box-orient: vertical;
-            -webkit-box-direction: normal;
-            flex-direction: column;
-            min-width: 0;
-            background-color: rgb(160, 161, 157);
-            background-clip: border-box;
-            border: 1px solid;
-            border-radius: .25rem;
-            box-shadow: 0 0.5em 1em -0.125em rgba(160, 161, 157, .1), 0 0 0 1px rgba(160, 161, 157, .02);
-            color: rgb(232, 236, 229);
-            max-width: 100%;
-            display: flex;
-            margin: 20px 30px auto;
-        }
-
-        .art-work-img {
-            width: 100%;
-            border-top-left-radius: calc(.25rem - 1px);
-            margin: auto;
-            height: 300px;
-            max-width: 300px;
-        }
-
-        .art-work-body {
-
-            -webkit-box-flex: 1;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .art-work-title {
-            margin-bottom: .75rem;
-        }
-
-        .art-work-artist {
-            font-size: 10px;
-            text-align: right;
-        }
-
-        body {
-            height: 100vh;
-            justify-content: center;
-            align-items: center;
-            background-color: rgb(79, 84, 88);
-        }
-
-        .select_button {
-            margin: 10px auto;
-        }
-
-        .btn:not(:disabled):not(.disabled) {
-            cursor: pointer;
-        }
-
-        .btn.btn-primary {
-            background: rgb(160, 161, 157);
-            border: 1px solid rgb(179, 197, 207);
-            color: #fff;
-            padding: 10px 20px;
-            border-radius: 4px;
-            box-shadow: none !important;
-            font-size: 10px;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        .btn.btn-primary:hover {
-            border: 1px solid rgb(179, 197, 207);
-            background: transparent;
-            color: rgb(179, 197, 207);
-        }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>some.st</title>
+        <link rel="stylesheet" href="static/style.css?44" type="text/css">
+        <link rel="stylesheet" media="screen and (max-width: 768px)" href="min.css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
-        {#.upload_file {#}
-        {#    heigth: 100vh;#}
-        {#    display: flex;#}
-        {#    justify-content: center;#}
-        {#    align-items: stretch;#}
-        {#}#}
-        {##}
-        {#label {#}
-        {#    background: rgb(160, 161, 157);#}
-        {#    border: 1px solid rgb(106, 123, 139);#}
-        {#    color: #fff;#}
-        {#    padding: 5px 5px;#}
-        {#    border-radius: 4px;#}
-        {#    box-shadow: none !important;#}
-        {#    font-size: 5px;#}
-        {#    text-transform: uppercase;#}
-        {#    letter-spacing: 1px;#}
-        {#}#}
-        {##}
-        {#label:hover {#}
-        {#    border: 1px solid rgb(106, 123, 139);#}
-        {#    background: transparent;#}
-        {#    color: rgb(106, 123, 139);#}
-        {#}#}
-        {##}
-        {#label.active {#}
-        {#    background-color: rgb(106, 123, 139);#}
-        {#    color: #ffffff;#}
-        {#}#}
-        {##}
-        {#label span {#}
-        {#    font-weight: normal;#}
-        {#}#}
-
-
-    </style>
-    <script>
-        $(document).ready(function () {
-
-        })
-
-
-        function ImgUpload() {
-            $.ajax({
-                type: 'POST',
-                url: "./style_transfer.py",
-                data: {
-                    content: './static/img/cat2.jpg',
-                    style: './static/img/wave.jpg'
-                },
-                dataType: 'text',
-                success: function (response) {
-                    if (response['result'] == 'success') {
-                        alert('요청성공')
-                    }
-                }
-            });
-        }
-
-        function loader() {
-
-        }
-
-
-    </script>
-</head>
-<body>
-<section class="foreword">
-    <div class="title_group">
-        <h1 class="title">some.st</h1>
-        <h4 class="subtitle">여러 화풍으로 이미지 변화</h4>
-    </div>
-</section>
-<section class="middle">
-    <div class="galley">
-        <div class="art-work">
-            <img class="art-work-img" src="static/img/la_muse.jpg" alt="la_muse">
-            <div class="art-work-body">
-                <h5 class="art-work-title">라뮤즈</h5>
-                <h5 class="art-work-artist">by 파블로 피카소</h5>
-                <div class="select_button">
-                    <button type="button" class="btn btn-primary" id="select">select</button>
-                </div>
-                {#            <div class="FileUpload">#}
-                {#                <input type="file" id="Uploadimg" name="Uploadfile" accept="image/png, image/jpeg"#}
-                {#                       formenctype="multipart/form-data">#}
-                {#                <span onclick="ImgUpload()" class="btn btn-white" id="Confirmation">Upload</span>#}
-                {#            </div>#}
-                {#            <div class="upload_file">#}
-                {#                <input type="file" name="" id="file" hidden/>#}
-                {#                <label for="file" id="selector">select file</label>#}
-                {#                <script src="./file.js"></script>#}
-                {#            </div>#}
+    </head>
+    <body>
+        <section class="foreword">
+            <div class="title_group">
+                <h1 class="title">some.st</h1>
+                <h4 class="subtitle">여러 화풍으로 이미지 변화</h4>
             </div>
-        </div>
-        <div class="art-work">
-            <img class="art-work-img" src="static/img/rain_princess.jpg" alt="rain_princess">
-            <div class="art-work-body">
-                <h5 class="art-work-title">비 공주</h5>
-                <h5 class="art-work-artist">by 레오니드 아프레모프</h5>
-                <div class="select_button">
-                    <button onclick="OpenCard()" type="button" class="btn btn-primary" id="select">select</button>
+        </section>
+        <div class="galley">
+            <div class="art-work">
+                <img class="art-work-img" src="static/la_muse.jpg" alt="la_muse">
+                <div class="art-work-body">
+                    <h5 class="art-work-title">라뮤즈</h5>
+                    <h5 class="art-work-artist">by 파블로 피카소</h5>
+                    <div class="select_button">
+                        <button onclick="OpenCard()" type="button" class="btn btn-primary">select</button>
+                    </div>
+                    {#            <div class="FileUpload">#}
+                    {#                <input type="file" id="Uploadimg" name="Uploadfile" accept="image/png, image/jpeg"#}
+                    {#                       formenctype="multipart/form-data">#}
+                    {#                <span onclick="ImgUpload()" class="btn btn-white" id="Confirmation">Upload</span>#}
+                    {#            </div>#}
+                    <div class="upload_file">
+                        <input type="file" name="" id="file" hidden>
+                        <label for="file" id="selector">select file</label>
+                    </div>
+                    <script src="../static/js/file.js"></script>
+                </div>
+            </div>
+            <div class="art-work">
+                <img class="art-work-img" src="static/rain_princess.jpg" alt="rain_princess">
+                <div class="art-work-body">
+                    <h5 class="art-work-title">비 공주</h5>
+                    <h5 class="art-work-artist">by 레오니드 아프레모프</h5>
+                    <div class="select_button">
+                        <button onclick="OpenCard()" type="button" class="btn btn-primary">선택</button>
+                    </div>
+                </div>
+            </div>
+            <div class="art-work">
+                <img class="art-work-img" src="static/the_scream.jpg" alt="the_scream">
+                <div class="art-work-body">
+                    <h5 class="art-work-title">절규</h5>
+                    <h5 class="art-work-artist">by 에드바르 뭉크</h5>
+                    <div class="select_button">
+                        <button onclick="OpenCard()" type="button" class="btn btn-primary">선택</button>
+                    </div>
+                </div>
+            </div>
+            <div class="art-work">
+                <img class="art-work-img" src="static/the_shipwreck_of_the_minotaur.jpg"
+                     alt="the_shipwreck_of_the_minotaur">
+                <div class="art-work-body">
+                    <h5 class="art-work-title">미노타우로스 호의 난파</h5>
+                    <h5 class="art-work-artist">by 윌리엄 터너</h5>
+                    <div class="select_button">
+                        <button onclick="OpenCard()" type="button" class="btn btn-primary">선택</button>
+                    </div>
+                </div>
+            </div>
+            <div class="art-work">
+                <img class="art-work-img" src="static/udnie.jpg" alt="udnie">
+                <div class="art-work-body">
+                    <h5 class="art-work-title">Udnie (젊은 미국 소녀, 댄스)</h5>
+                    <h5 class="art-work-artist">by 프란시스 피카비아</h5>
+                    <div class="select_button">
+                        <button onclick="OpenCard()" type="button" class="btn btn-primary">선택</button>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="art-work">
-            <img class="art-work-img" src="static/img/the_scream.jpg" alt="the_scream">
-            <div class="art-work-body">
-                <h5 class="art-work-title">절규</h5>
-                <h5 class="art-work-artist">by 에드바르 뭉크</h5>
-                <div class="select_button">
-                    <button onclick="OpenCard()" type="button" class="btn btn-primary" id="select">select</button>
-                </div>
-            </div>
-        </div>
-        <div class="art-work">
-            <img class="art-work-img" src="static/img/the_shipwreck_of_the_minotaur.jpg"
-                 alt="the_shipwreck_of_the_minotaur">
-            <div class="art-work-body">
-                <h5 class="art-work-title">미노타우로스 호의 난파</h5>
-                <h5 class="art-work-artist">by 윌리엄 터너</h5>
-                <div class="select_button">
-                    <button onclick="OpenCard()" type="button" class="btn btn-primary" id="select">select</button>
-                </div>
-            </div>
-        </div>
-        <div class="art-work">
-            <img class="art-work-img" src="static/img/udnie.jpg" alt="udnie">
-            <div class="art-work-body">
-                <h5 class="art-work-title">Udnie (젊은 미국 소녀, 댄스)</h5>
-                <h5 class="art-work-artist">by 프란시스 피카비아</h5>
-                <div class="select_button">
-                    <button onclick="OpenCard()" type="button" class="btn btn-primary" id="select">select</button>
-                </div>
-            </div>
-        </div>
-        <div class="art-work">
-            <img class="art-work-img" src="static/img/wave.jpg" alt="udnie">
-            <div class="art-work-body">
-                <h5 class="art-work-title">가나가와 해변의 높은 파도 아래</h5>
-                <h5 class="art-work-artist">by 가쓰시카 호쿠사이</h5>
-                <div class="select_button">
-                    <button onclick="OpenCard()" type="button" class="btn btn-primary" id="select">select</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<div class="submit">
-    <input type="file" id="Uploadimg" name="Uploadfile" accept="image/png, image/jpeg"
-           formenctype="multipart/form-data">
-    <span onclick="ImgUpload()" class="btn btn-white" id="Confirmation">Upload</span>
-</div>
-</body>
+    </body>
+    <script type="text/javascript" src="./static/js/script.js"></script>
 </html>
