--- a/templates/index.html
+++ b/templates/index.html
@@ -4,44 +4,116 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>some.st</title>
-        <link rel="stylesheet" href="static/style.css?44" type="text/css">
-        <link rel="stylesheet" media="screen and (max-width: 768px)" href="min.css"/>
+        <link rel="stylesheet" href="static/css/style.css?50" type="text/css">
+        {#        <link rel="stylesheet" media="screen and (max-width: 768px)" href="min.css"/>#}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
                 integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
                 crossorigin="anonymous"></script>
 
-        <script>
-            $(document).ready(function () {
-
-            })
-            $('#url').onkeypress(function (e) {
-                if (e.keyCode == 13) {
-                    let url = $('#url').val();
-                    let show = document.querySelector('input');
-                    show.placeholder = "saved url :" + url;
-                    let showurl = '<span>' + show.placeholder + '</span>'
-                    let outurl = document.getElementById("selector");
-                    outurl.innerHTML = showurl;
-                    outurl.classList.add("active");
-                }
-                let inputurl = document.getElementById("url");
-                inputurl.addEventListener("change",);
-                $.ajax({
-                    type: 'POST',
-                    url: "/transfer",
-                    data: {
-                        content: content,
-                        style: 'D:/privacy/transfer_style/static/img/wave.jpg'
-                    },
-                    dataType: 'text',
-                    success: function (data) {
-                        console.log(data.content)
-                        console.log(data.style)
-                    }
-                })
-            })
-        </script>
+{#        <script>#}
+{#            $(document).ready(function () {#}
+{##}
+{#            })#}
+{##}
+{#            function ShowUrlButton() {#}
+{#                let value = event.target.id;#}
+{#                let Hidenimg = $(".show_img").hide();#}
+{#                Hidenimg#}
+{#                let empty = $('#url').val('');#}
+{#                empty;#}
+{#                let Openbutton = $(".upload_button").show();#}
+{#                let Uploadurl = $(".upload_url").css("display", "flex");#}
+{#                let url = $("#url").css("display", "flex");#}
+{#                let Hidenlabel = $("#selector").hide();#}
+{#                if (value == "1") {#}
+{#                    Openbutton;#}
+{#                    Uploadurl;#}
+{#                    url;#}
+{#                    Hidenlabel;#}
+{#                    let path = $(".photo_frames").attr("alt", "https://github.com/taeyoung-developer/toy_project/blob/master/static/img/la_muse.jpg?raw=true");#}
+{#                } else if (value == "2") {#}
+{#                    Openbutton;#}
+{#                    Uploadurl;#}
+{#                    url;#}
+{#                    Hidenlabel;#}
+{#                    let path = $(".photo_frames").attr("alt", "https://github.com/taeyoung-developer/toy_project/blob/master/static/img/rain_princess.jpg?raw=true");#}
+{##}
+{#                } else if (value == "3") {#}
+{#                    Openbutton;#}
+{#                    Uploadurl;#}
+{#                    url;#}
+{#                    Hidenlabel;#}
+{#                    let path = $(".photo_frames").attr("alt", "https://github.com/taeyoung-developer/toy_project/blob/master/static/img/the_scream.jpg?raw=true");#}
+{##}
+{#                } else if (value == "4") {#}
+{#                    Openbutton;#}
+{#                    Uploadurl;#}
+{#                    url;#}
+{#                    Hidenlabel;#}
+{#                    let path = $(".photo_frames").attr("alt", "https://github.com/taeyoung-developer/toy_project/blob/master/static/img/the_shipwreck_of_the_minotaur.jpg?raw=true");#}
+{##}
+{#                } else if (value == "5") {#}
+{#                    Openbutton;#}
+{#                    Uploadurl;#}
+{#                    url;#}
+{#                    Hidenlabel;#}
+{#                    let path = $(".photo_frames").attr("alt", "https://github.com/taeyoung-developer/toy_project/blob/master/static/img/udnie.jpg?raw=true");#}
+{##}
+{#                } else if (value == "6") {#}
+{#                    Openbutton;#}
+{#                    Uploadurl;#}
+{#                    url;#}
+{#                    Hidenlabel;#}
+{#                    let path = $(".photo_frames").attr("alt", "https://github.com/taeyoung-developer/toy_project/blob/master/static/img/wave.jpg?raw=true");#}
+{##}
+{#                } else {#}
+{#                    $(".upload_url").css("display", "none")#}
+{#                }#}
+{##}
+{#            }#}
+{##}
+{##}
+{#            function enter() {#}
+{#                if (event.keyCode == 13) {#}
+{#                    let content = $('#url').val();#}
+{#                    $('#url').css('display', 'none')#}
+{#                    $('#selector').css({#}
+{#                        'display': 'flex',#}
+{#                        'background-color': 'rgb(106,123,139)',#}
+{#                        'color': 'rgb(79, 84, 88)',#}
+{#                        'font-weight': 'normal',#}
+{#                        'text-transform': 'uppercase',#}
+{#                        'text-align': 'center',#}
+{#                        'letter-spacing': '2px',#}
+{#                        'font-weight': 'bold'#}
+{#                    });#}
+{#                    let style = $(".photo_frames").attr("alt")#}
+{#                    let show = '<span>saved url : </span>' + content;#}
+{#                    let Outurl = document.getElementById("selector");#}
+{#                    Outurl.innerHTML = show;#}
+{#                    $.ajax({#}
+{#                        type: 'POST',#}
+{#                        url: "/transfer",#}
+{#                        data: {#}
+{#                            content: content,#}
+{#                            style: style#}
+{#                        },#}
+{#                        dataType: 'json',#}
+{#                        success: function (response) {#}
+{#                            $(".upload_button").hide();#}
+{#                            let img = response['output_url'];#}
+{#                            $(".show_img").css("display", "flex");#}
+{#                            $("#origin_img").attr("src", content);#}
+{#                            $("#transfer_img").attr("src", img);#}
+{#                            $("#transfer_url").attr("href", img);#}
+{##}
+{#                        }#}
+{#                    })#}
+{#                }#}
+{#            }#}
+{##}
+{#        </script>#}
     </head>
     <body>
         <section class="foreword">
@@ -58,7 +130,7 @@
                         <h5 class="art-work-title">라뮤즈</h5>
                         <h5 class="art-work-artist">by 파블로 피카소</h5>
                         <div class="select_button">
-                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="select">select
+                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="1">select
                             </button>
                         </div>
                     </div>
@@ -69,7 +141,7 @@
                         <h5 class="art-work-title">비 공주</h5>
                         <h5 class="art-work-artist">by 레오니드 아프레모프</h5>
                         <div class="select_button">
-                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary">select
+                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="2">select
                             </button>
                         </div>
                     </div>
@@ -80,7 +152,7 @@
                         <h5 class="art-work-title">절규</h5>
                         <h5 class="art-work-artist">by 에드바르 뭉크</h5>
                         <div class="select_button">
-                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="select">select
+                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="3">select
                             </button>
                         </div>
                     </div>
@@ -92,7 +164,7 @@
                         <h5 class="art-work-title">미노타우로스 호의 난파</h5>
                         <h5 class="art-work-artist">by 윌리엄 터너</h5>
                         <div class="select_button">
-                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="select">select
+                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="4">select
                             </button>
                         </div>
                     </div>
@@ -103,7 +175,7 @@
                         <h5 class="art-work-title">Udnie (젊은 미국 소녀, 댄스)</h5>
                         <h5 class="art-work-artist">by 프란시스 피카비아</h5>
                         <div class="select_button">
-                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="select">select
+                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="5">select
                             </button>
                         </div>
                     </div>
@@ -114,7 +186,7 @@
                         <h5 class="art-work-title">가나가와 해변의 높은 파도 아래</h5>
                         <h5 class="art-work-artist">by 가쓰시카 호쿠사이</h5>
                         <div class="select_button">
-                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="select">select
+                            <button onclick="ShowUrlButton()" type="button" class="btn btn-primary" id="6">select
                             </button>
                         </div>
                     </div>
@@ -123,9 +195,25 @@
         </section>
         <section class="upload_button" id="open">
             <div class="upload_url">
-                <input type="text" name="url" placeholder="paste url here" id="url">
-                <label for="url" id="selector"></label>
+                <input type="text" id="url" onkeypress="enter();" name="" placeholder="paste url here"/>
+                <label for="url" id="selector" hidden></label>
             </div>
         </section>
+        <section class="show_img" id="two_img">
+            <div class="photo_frames">
+                <div class="origin">
+                    <img id='origin_img' src="">
+                </div>
+                <div class="transfer">
+                    <img id='transfer_img' src="">
+                </div>
+                <div class="download_button">
+                    <a id='transfer_url' href="">
+                        <button>download</button>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <script src="static/js/script.js"></script>
     </body>
 </html>
